[CrOS MultiDevice] Update Instant Tethering "no network" message.

The previous message was too strongly worded, since it implied taht
other devices did not have Instant Tethering enabled. This new string
was suggested by jonann@.

Bug: 918014
Change-Id: Ib01c55c12c64a5e9b84dcc4366f43c48caa7f55e
Reviewed-on: https://chromium-review.googlesource.com/c/1407773
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622579}
Former-commit-id: eca25fa41c2380449de990a3d023321f4bb9e195